--- a/projects/mario/index.html
+++ b/projects/mario/index.html
@@ -49,6 +49,8 @@
     </div6>
 
     <Math id="total5"></Math>
+    <Math id="total6"></Math>
+    <Math id="total7"></Math>
 
     <footer>
         <p>contact: <a href="mailto:marioscool@gmail.com">marioscool@gmail.com</a></p>
