--- a/projects/mario/index.html
+++ b/projects/mario/index.html
@@ -48,7 +48,7 @@
         <button>submit</button>
     </div6>
 
-    <Math id="total5"></Math>
+    <Math class="total5" id="total5"></Math>
     <Math id="total6"></Math>
     <Math id="total7"></Math>
 
