--- a/projects/mario/index.html
+++ b/projects/mario/index.html
@@ -44,8 +44,8 @@
 
     <div4 id="total3"></div4>
 
-    <div6 id="total4">
-        <button>submit</button>
+    <div6 >
+        <button id="total4">submit</button>
     </div6>
 
     <Math class="total5" id="total5"></Math>
