--- a/projects/momList/index.html
+++ b/projects/momList/index.html
@@ -9,10 +9,11 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <form>
-        <input type="text" name="item" placeholder="what do you need on your shopping list?">
-        <
+    <form name = "addTodo">
+        <input type="text" name="item" placeholder="New Item">
+        <button class="sub">submit</button>
     </form>
+    <div id="todos"></div>
     
 </body>
 </html>
