--- a/projects/zenGarden/index.html
+++ b/projects/zenGarden/index.html
@@ -9,14 +9,14 @@
     <script src="main.js"></script>
 </head>
 <header>
-    <h1>
-        "CSS ZEN GARDEN"
-    </h1>
+    <img id="cir" src="http://www.csszengarden.com/214/enso.svg">
+    <h1>CSS ZEN GARDEN</h1>
     <h2>
-        "The beauty of "
+        The beauty of 
         <abbr title="Cascading Style Sheets">CSS</abbr>
-        " Design"
+         Design
     </h2>
+    <h3>View All Designs</h3>
 </header>
 <body>
     <div class="summary" id="zenSummary" role="article">
@@ -93,6 +93,7 @@
             </p>
         </div>
         <div class="requirements" id="zenRequirements" role="article">
+            <h3>Requirements</h3>
             <p>
                 Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to 
                 widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is 
@@ -117,15 +118,16 @@
                 (with limited exceptions, see submission guidelines), but we ask you release your CSS under a 
                 Creative Commons license identical to the one on this site so that others may learn from your work.
             </p>
-            <p role="contentinfo">
-                "By "
+            <p role="contentinfo" class="bar">
+                By 
                 <a href="http://www.mezzoblue.com/">Dave Shea</a>
-                ". Bandwidth graciously donated by "
+                . Bandwidth graciously donated by 
                 <a href="http://www.mediatemple.net/">mediatemple</a>
-                ". Now available: "
+                . Now available: 
+                <br>
                 <a href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20">
-                Zen Garden, the book</a>
-                "."
+                Zen Garden, the book.</a>
+                
             </p>
         </div>
         <footer>
@@ -247,5 +249,6 @@
             </div>
         </div>
     </aside>
+
 </body>
 </html>
