--- a/exercises/react-exercise/btreact/public/index.html
+++ b/exercises/react-exercise/btreact/public/index.html
@@ -25,12 +25,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <nav id="nav"></nav>
     <div id="root"></div>
-    <br>
-    <div id="root1"></div>
-    <br>
-    <div id="root2"></div>
-    <div id='root3'></div>
+    <div id="feet"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  
   </body>
 </html>
